--- a/TunnelJoggler/Resources/TunnelJoggler.plist
+++ b/TunnelJoggler/Resources/TunnelJoggler.plist
@@ -4,14 +4,27 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>Paddle.png</key>
+            <key>Ball.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{10,30}}</string>
+                <string>{{2,2},{52,52}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{52,52}}</string>
+                <key>sourceSize</key>
+                <string>{52,52}</string>
+            </dict>
+            <key>Paddle.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,56},{10,30}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{10,30}}</string>
                 <key>sourceSize</key>
@@ -25,9 +38,9 @@
             <key>realTextureFileName</key>
             <string>TunnelJoggler.png</string>
             <key>size</key>
-            <string>{16,64}</string>
+            <string>{64,128}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:254d865221aeef35497537529bdd738b$</string>
+            <string>$TexturePacker:SmartUpdate:e8518f36ff767a4bbcb9d6b3ed04840b$</string>
             <key>textureFileName</key>
             <string>TunnelJoggler.png</string>
         </dict>
