--- a/TunnelJoggler/Resources/buttons/buttons-hd.plist
+++ b/TunnelJoggler/Resources/buttons/buttons-hd.plist
@@ -7,106 +7,106 @@
             <key>btn-exit-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{92,212},{186,86}}</string>
+                <string>{{212,92},{86,186}}</string>
                 <key>offset</key>
-                <string>{1,1}</string>
+                <string>{0,-1}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{2,0},{186,86}}</string>
+                <string>{{1,2},{86,186}}</string>
                 <key>sourceSize</key>
-                <string>{188,88}</string>
+                <string>{88,188}</string>
             </dict>
             <key>btn-exit-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,422},{186,86}}</string>
+                <string>{{422,2},{86,186}}</string>
                 <key>offset</key>
-                <string>{1,1}</string>
+                <string>{0,-1}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{2,0},{186,86}}</string>
+                <string>{{1,2},{86,186}}</string>
                 <key>sourceSize</key>
-                <string>{188,88}</string>
+                <string>{88,188}</string>
             </dict>
             <key>btn-pause-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,92},{58,104}}</string>
+                <string>{{92,62},{58,104}}</string>
                 <key>offset</key>
-                <string>{0,0}</string>
+                <string>{-1,0}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
-                <string>{{1,3},{58,104}}</string>
+                <string>{{0,3},{58,104}}</string>
                 <key>sourceSize</key>
                 <string>{60,110}</string>
             </dict>
             <key>btn-pause-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{62,92},{104,58}}</string>
+                <string>{{92,2},{58,104}}</string>
                 <key>offset</key>
-                <string>{0,0}</string>
+                <string>{-1,0}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{3,1},{104,58}}</string>
+                <string>{{0,3},{58,104}}</string>
                 <key>sourceSize</key>
-                <string>{110,60}</string>
+                <string>{60,110}</string>
             </dict>
             <key>btn-small-play-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,212},{208,88}}</string>
+                <string>{{212,2},{88,208}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{208,88}}</string>
+                <string>{{0,0},{88,208}}</string>
                 <key>sourceSize</key>
-                <string>{208,88}</string>
+                <string>{88,208}</string>
             </dict>
             <key>btn-small-play-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{422,2},{208,88}}</string>
+                <string>{{2,422},{88,208}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{208,88}}</string>
+                <string>{{0,0},{88,208}}</string>
                 <key>sourceSize</key>
-                <string>{208,88}</string>
+                <string>{88,208}</string>
             </dict>
             <key>btn-try-again-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{212,2},{208,88}}</string>
+                <string>{{2,212},{88,208}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{1,0},{208,88}}</string>
+                <string>{{0,1},{88,208}}</string>
                 <key>sourceSize</key>
-                <string>{210,88}</string>
+                <string>{88,210}</string>
             </dict>
             <key>btn-try-again-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{208,88}}</string>
+                <string>{{2,2},{88,208}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{1,0},{208,88}}</string>
+                <string>{{0,1},{88,208}}</string>
                 <key>sourceSize</key>
-                <string>{210,88}</string>
+                <string>{88,210}</string>
             </dict>
         </dict>
         <key>metadata</key>
@@ -118,7 +118,7 @@
             <key>size</key>
             <string>{512,512}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:ea3885552e07937c3eb2958b10c903cb$</string>
+            <string>$TexturePacker:SmartUpdate:739aed598ed07955321f17b31d72b1a2$</string>
             <key>textureFileName</key>
             <string>buttons-hd.png</string>
         </dict>
