--- a/TunnelJoggler/Resources/buttons/buttons.plist
+++ b/TunnelJoggler/Resources/buttons/buttons.plist
@@ -7,37 +7,37 @@
             <key>btn-exit-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{130,209},{94,44}}</string>
+                <string>{{209,130},{44,94}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{94,44}}</string>
+                <string>{{0,0},{44,94}}</string>
                 <key>sourceSize</key>
-                <string>{94,44}</string>
+                <string>{44,94}</string>
             </dict>
             <key>btn-exit-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{34,209},{94,44}}</string>
+                <string>{{209,34},{44,94}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{94,44}}</string>
+                <string>{{0,0},{44,94}}</string>
                 <key>sourceSize</key>
-                <string>{94,44}</string>
+                <string>{44,94}</string>
             </dict>
             <key>btn-pause-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{216,2},{30,53}}</string>
+                <string>{{163,2},{30,53}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{0,1},{30,53}}</string>
                 <key>sourceSize</key>
@@ -46,67 +46,67 @@
             <key>btn-pause-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,163},{53,30}}</string>
+                <string>{{2,216},{30,53}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{1,0},{53,30}}</string>
+                <string>{{0,1},{30,53}}</string>
                 <key>sourceSize</key>
-                <string>{55,30}</string>
+                <string>{30,55}</string>
             </dict>
             <key>btn-small-play-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{34,163},{104,44}}</string>
+                <string>{{163,34},{44,104}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{104,44}}</string>
+                <string>{{0,0},{44,104}}</string>
                 <key>sourceSize</key>
-                <string>{104,44}</string>
+                <string>{44,104}</string>
             </dict>
             <key>btn-small-play-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,57},{104,44}}</string>
+                <string>{{57,2},{44,104}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <true/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{104,44}}</string>
+                <string>{{0,0},{44,104}}</string>
                 <key>sourceSize</key>
-                <string>{104,44}</string>
+                <string>{44,104}</string>
             </dict>
             <key>btn-try-again-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{109,2},{105,44}}</string>
+                <string>{{2,109},{44,105}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{105,44}}</string>
+                <string>{{0,0},{44,105}}</string>
                 <key>sourceSize</key>
-                <string>{105,44}</string>
+                <string>{44,105}</string>
             </dict>
             <key>btn-try-again-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{105,44}}</string>
+                <string>{{2,2},{44,105}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{105,44}}</string>
+                <string>{{0,0},{44,105}}</string>
                 <key>sourceSize</key>
-                <string>{105,44}</string>
+                <string>{44,105}</string>
             </dict>
         </dict>
         <key>metadata</key>
@@ -118,7 +118,7 @@
             <key>size</key>
             <string>{256,256}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:820c3782263f858c20eff972976b0497$</string>
+            <string>$TexturePacker:SmartUpdate:95d9b49b2d50109803cebeaf3f8505b1$</string>
             <key>textureFileName</key>
             <string>buttons.png</string>
         </dict>
