--- a/TunnelJoggler/Resources/buttons/buttons-hd.plist
+++ b/TunnelJoggler/Resources/buttons/buttons-hd.plist
@@ -7,7 +7,7 @@
             <key>btn-exit-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{212,92},{86,186}}</string>
+                <string>{{2,894},{86,186}}</string>
                 <key>offset</key>
                 <string>{0,-1}</string>
                 <key>rotated</key>
@@ -20,11 +20,11 @@
             <key>btn-exit-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{422,2},{86,186}}</string>
+                <string>{{2,564},{86,186}}</string>
                 <key>offset</key>
                 <string>{0,-1}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{1,2},{86,186}}</string>
                 <key>sourceSize</key>
@@ -33,11 +33,11 @@
             <key>btn-pause-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{92,62},{58,104}}</string>
+                <string>{{436,108},{58,104}}</string>
                 <key>offset</key>
                 <string>{-1,0}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{0,3},{58,104}}</string>
                 <key>sourceSize</key>
@@ -46,11 +46,11 @@
             <key>btn-pause-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{92,2},{58,104}}</string>
+                <string>{{436,2},{58,104}}</string>
                 <key>offset</key>
                 <string>{-1,0}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{0,3},{58,104}}</string>
                 <key>sourceSize</key>
@@ -59,11 +59,11 @@
             <key>btn-small-play-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{212,2},{88,208}}</string>
+                <string>{{2,684},{88,208}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{88,208}}</string>
                 <key>sourceSize</key>
@@ -72,11 +72,11 @@
             <key>btn-small-play-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,422},{88,208}}</string>
+                <string>{{422,474},{88,208}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{88,208}}</string>
                 <key>sourceSize</key>
@@ -85,11 +85,11 @@
             <key>btn-try-again-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,212},{88,208}}</string>
+                <string>{{212,474},{88,208}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{0,1},{88,208}}</string>
                 <key>sourceSize</key>
@@ -98,15 +98,41 @@
             <key>btn-try-again-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{88,208}}</string>
+                <string>{{2,474},{88,208}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{0,1},{88,208}}</string>
                 <key>sourceSize</key>
                 <string>{88,210}</string>
+            </dict>
+            <key>info-level-failed.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,238},{234,432}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{3,4},{234,432}}</string>
+                <key>sourceSize</key>
+                <string>{240,440}</string>
+            </dict>
+            <key>info-level-passed.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,2},{234,432}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{3,4},{234,432}}</string>
+                <key>sourceSize</key>
+                <string>{240,440}</string>
             </dict>
         </dict>
         <key>metadata</key>
@@ -116,9 +142,9 @@
             <key>realTextureFileName</key>
             <string>buttons-hd.png</string>
             <key>size</key>
-            <string>{512,512}</string>
+            <string>{512,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:739aed598ed07955321f17b31d72b1a2$</string>
+            <string>$TexturePacker:SmartUpdate:8a8bd73562ad23acc81ba2c737808fb8$</string>
             <key>textureFileName</key>
             <string>buttons-hd.png</string>
         </dict>
