--- a/TunnelJoggler/Resources/buttons/buttons-hd.plist
+++ b/TunnelJoggler/Resources/buttons/buttons-hd.plist
@@ -7,7 +7,7 @@
             <key>btn-exit-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,894},{86,186}}</string>
+                <string>{{310,562},{86,186}}</string>
                 <key>offset</key>
                 <string>{0,-1}</string>
                 <key>rotated</key>
@@ -20,7 +20,7 @@
             <key>btn-exit-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,564},{86,186}}</string>
+                <string>{{310,474},{86,186}}</string>
                 <key>offset</key>
                 <string>{0,-1}</string>
                 <key>rotated</key>
@@ -56,14 +56,40 @@
                 <key>sourceSize</key>
                 <string>{60,110}</string>
             </dict>
-            <key>btn-small-play-normal.png</key>
+            <key>btn-play-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,684},{88,208}}</string>
+                <string>{{2,614},{138,306}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{1,1},{138,306}}</string>
+                <key>sourceSize</key>
+                <string>{140,308}</string>
+            </dict>
+            <key>btn-play-selected.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,474},{138,306}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{1,1},{138,306}}</string>
+                <key>sourceSize</key>
+                <string>{140,308}</string>
+            </dict>
+            <key>btn-small-play-normal.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{272,754},{88,208}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{88,208}}</string>
                 <key>sourceSize</key>
@@ -72,7 +98,7 @@
             <key>btn-small-play-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{422,474},{88,208}}</string>
+                <string>{{182,754},{88,208}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -85,11 +111,11 @@
             <key>btn-try-again-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{212,474},{88,208}}</string>
+                <string>{{92,754},{88,208}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{0,1},{88,208}}</string>
                 <key>sourceSize</key>
@@ -98,11 +124,11 @@
             <key>btn-try-again-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,474},{88,208}}</string>
+                <string>{{2,754},{88,208}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{0,1},{88,208}}</string>
                 <key>sourceSize</key>
@@ -144,7 +170,7 @@
             <key>size</key>
             <string>{512,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:8a8bd73562ad23acc81ba2c737808fb8$</string>
+            <string>$TexturePacker:SmartUpdate:50e0a87012c21403c01939d36e30bceb$</string>
             <key>textureFileName</key>
             <string>buttons-hd.png</string>
         </dict>
