--- a/TunnelJoggler/Resources/buttons/buttons.plist
+++ b/TunnelJoggler/Resources/buttons/buttons.plist
@@ -7,7 +7,7 @@
             <key>btn-exit-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{144,288},{44,94}}</string>
+                <string>{{158,288},{44,94}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -20,7 +20,7 @@
             <key>btn-exit-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{48,288},{44,94}}</string>
+                <string>{{158,242},{44,94}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -56,14 +56,40 @@
                 <key>sourceSize</key>
                 <string>{30,55}</string>
             </dict>
-            <key>btn-small-play-normal.png</key>
+            <key>btn-play-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,394},{44,104}}</string>
+                <string>{{2,314},{70,154}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{70,154}}</string>
+                <key>sourceSize</key>
+                <string>{70,154}</string>
+            </dict>
+            <key>btn-play-selected.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,242},{70,154}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{70,154}}</string>
+                <key>sourceSize</key>
+                <string>{70,154}</string>
+            </dict>
+            <key>btn-small-play-normal.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{140,386},{44,104}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{44,104}}</string>
                 <key>sourceSize</key>
@@ -72,7 +98,7 @@
             <key>btn-small-play-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,288},{44,104}}</string>
+                <string>{{94,386},{44,104}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -85,11 +111,11 @@
             <key>btn-try-again-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{109,242},{44,105}}</string>
+                <string>{{48,386},{44,105}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{44,105}}</string>
                 <key>sourceSize</key>
@@ -98,11 +124,11 @@
             <key>btn-try-again-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,242},{44,105}}</string>
+                <string>{{2,386},{44,105}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{44,105}}</string>
                 <key>sourceSize</key>
@@ -144,7 +170,7 @@
             <key>size</key>
             <string>{256,512}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:e5756786ec8fc1f8664de356c48711d3$</string>
+            <string>$TexturePacker:SmartUpdate:0482bb98991aded508586d59c885a5f7$</string>
             <key>textureFileName</key>
             <string>buttons.png</string>
         </dict>
