--- a/TunnelJoggler/Resources/buttons/buttons.plist
+++ b/TunnelJoggler/Resources/buttons/buttons.plist
@@ -7,11 +7,11 @@
             <key>btn-exit-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{158,288},{44,94}}</string>
+                <string>{{203,141},{44,94}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{44,94}}</string>
                 <key>sourceSize</key>
@@ -20,11 +20,11 @@
             <key>btn-exit-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{158,242},{44,94}}</string>
+                <string>{{204,393},{44,94}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{44,94}}</string>
                 <key>sourceSize</key>
@@ -33,7 +33,7 @@
             <key>btn-pause-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{220,57},{30,53}}</string>
+                <string>{{214,237},{30,53}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -46,11 +46,11 @@
             <key>btn-pause-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{220,2},{30,53}}</string>
+                <string>{{194,109},{30,53}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{0,1},{30,53}}</string>
                 <key>sourceSize</key>
@@ -59,11 +59,11 @@
             <key>btn-play-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,314},{70,154}}</string>
+                <string>{{122,2},{70,154}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{70,154}}</string>
                 <key>sourceSize</key>
@@ -72,7 +72,7 @@
             <key>btn-play-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,242},{70,154}}</string>
+                <string>{{2,438},{70,154}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -85,11 +85,11 @@
             <key>btn-small-play-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{140,386},{44,104}}</string>
+                <string>{{168,287},{44,104}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{44,104}}</string>
                 <key>sourceSize</key>
@@ -98,7 +98,7 @@
             <key>btn-small-play-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{94,386},{44,104}}</string>
+                <string>{{158,394},{44,104}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -111,7 +111,7 @@
             <key>btn-try-again-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{48,386},{44,105}}</string>
+                <string>{{122,287},{44,105}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -124,7 +124,7 @@
             <key>btn-try-again-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,386},{44,105}}</string>
+                <string>{{194,2},{44,105}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -134,14 +134,27 @@
                 <key>sourceSize</key>
                 <string>{44,105}</string>
             </dict>
-            <key>info-level-failed.png</key>
+            <key>finger.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,122},{118,216}}</string>
+                <string>{{122,158},{127,79}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <true/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{127,79}}</string>
+                <key>sourceSize</key>
+                <string>{127,79}</string>
+            </dict>
+            <key>info-level-failed.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,220},{118,216}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{1,2},{118,216}}</string>
                 <key>sourceSize</key>
@@ -154,7 +167,7 @@
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{1,2},{118,216}}</string>
                 <key>sourceSize</key>
@@ -170,7 +183,7 @@
             <key>size</key>
             <string>{256,512}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:0482bb98991aded508586d59c885a5f7$</string>
+            <string>$TexturePacker:SmartUpdate:670c19208b51873de6e5aedc318646e3$</string>
             <key>textureFileName</key>
             <string>buttons.png</string>
         </dict>
