--- a/TunnelJoggler/Resources/buttons/buttons.plist
+++ b/TunnelJoggler/Resources/buttons/buttons.plist
@@ -7,7 +7,7 @@
             <key>btn-exit-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{203,141},{44,94}}</string>
+                <string>{{439,216},{44,94}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -20,7 +20,7 @@
             <key>btn-exit-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{204,393},{44,94}}</string>
+                <string>{{393,146},{44,94}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -33,7 +33,7 @@
             <key>btn-pause-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{214,237},{30,53}}</string>
+                <string>{{122,57},{30,53}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -46,11 +46,11 @@
             <key>btn-pause-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{194,109},{30,53}}</string>
+                <string>{{122,2},{30,53}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{0,1},{30,53}}</string>
                 <key>sourceSize</key>
@@ -59,11 +59,11 @@
             <key>btn-play-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{122,2},{70,154}}</string>
+                <string>{{158,2},{70,154}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{70,154}}</string>
                 <key>sourceSize</key>
@@ -85,11 +85,11 @@
             <key>btn-small-play-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{168,287},{44,104}}</string>
+                <string>{{158,155},{44,104}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{44,104}}</string>
                 <key>sourceSize</key>
@@ -98,11 +98,11 @@
             <key>btn-small-play-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{158,394},{44,104}}</string>
+                <string>{{287,146},{44,104}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{44,104}}</string>
                 <key>sourceSize</key>
@@ -111,7 +111,7 @@
             <key>btn-try-again-normal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{122,287},{44,105}}</string>
+                <string>{{465,109},{44,105}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -124,7 +124,7 @@
             <key>btn-try-again-selected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{194,2},{44,105}}</string>
+                <string>{{465,2},{44,105}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -137,11 +137,11 @@
             <key>finger.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{122,158},{127,79}}</string>
+                <string>{{158,74},{127,79}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
-                <true/>
+                <false/>
                 <key>sourceColorRect</key>
                 <string>{{0,0},{127,79}}</string>
                 <key>sourceSize</key>
@@ -173,6 +173,32 @@
                 <key>sourceSize</key>
                 <string>{120,220}</string>
             </dict>
+            <key>player-picture-default.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{314,2},{149,142}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{149,142}}</string>
+                <key>sourceSize</key>
+                <string>{149,142}</string>
+            </dict>
+            <key>player-picture-frame.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,2},{118,216}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{1,2},{118,216}}</string>
+                <key>sourceSize</key>
+                <string>{120,220}</string>
+            </dict>
         </dict>
         <key>metadata</key>
         <dict>
@@ -181,9 +207,9 @@
             <key>realTextureFileName</key>
             <string>buttons.png</string>
             <key>size</key>
-            <string>{256,512}</string>
+            <string>{512,512}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:670c19208b51873de6e5aedc318646e3$</string>
+            <string>$TexturePacker:SmartUpdate:3bf59e8b1648b412203c4e81e002cde4$</string>
             <key>textureFileName</key>
             <string>buttons.png</string>
         </dict>
